2000-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Options.cpp : Bugfix.  Some DrawInfo attributes were not
 	being updated.  This lead to options like fontPointsize not
 	changing the font.

2000-08-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (blurImage, charcoalImage, embossImage,
 	sharpenImage): Expand order_ argument to radius_ & sigma_
 	arguments for more control (matches ImageMagick API change).

	* lib/Image.cpp (blur, charcoal, emboss, sharpen): Expand order_
 	argument to radius_ & sigma_ arguments for more control (matches
 	ImageMagick API change).

2000-08-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (read): Check returned Image for embedded
 	exception, as well as the existing parameter check.  This fixes
 	the bug that warnings are not reported.

2000-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* test/*.cpp demo/*.cpp: Added call to MagickIncarnate() to set
 	ImageMagick install location for Windows.  Hopefully this hack can
 	be removed someday.

2000-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (colorFuzz): Changed type to 'double' from
	'unsigned int' to match change in ImageMagick.

	* lib/Color.cpp (Color*): Added copy constructor from base class.
	(operator =): Added assignment operator from base class.

2000-06-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h : Changed enumeration FilterType to
 	FilterTypes, and QuantumTypes to QuantumType in order to match
 	last-minute API change in ImageMagick.

2000-06-22  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>

        * lib/Magick++/Pixels.cpp (indexes): Bugfix, use GetCacheViewIndexes()
        rather than GetIndexes().

2000-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Montage.h (gravity): Type of gravity_ argument, and
 	return value changed from 'unsigned int' to GravityType.
